// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonCta should handle sizes correctly 1`] = `
<div>
  <button
    class="fdButtonCta s"
  >
    Knopje
  </button>
</div>
`;

exports[`ButtonCta should handle sizes correctly 2`] = `
<div>
  <button
    class="fdButtonCta m"
  >
    Knopje
  </button>
</div>
`;
